--- a/form.html
+++ b/form.html
@@ -4,8 +4,11 @@
     
     <title>Registration Form</title>
 </head>
+ 
 <body>
     <form>
+        <fieldset>
+            <legend> Personal Information</legend>
     <h1><b> Registration Form </b></h1>
     <label> Enter your name </label> <br>
     <input type="text" name="name"> <br>
@@ -32,12 +35,22 @@
                 <input type="checkbox" value="hindi"> hindi <br>
             <input type="checkbox" value="maths"> maths <br>
 <br>
+<label> Enter your board</label>
+<select name="board">
+<option value="ICSE"> ICSE</option>
+<option value="CBSE"> CBSE</option>
+<option value="IB"> IB</option>
+<option value="State Board"> State Board</option>
+</select>
+
 <br>
+
+
 
             <input type="submit"> 
 
 
-
+</fieldset>
 
 
 
