--- a/css and html/lesson5activity1.html
+++ b/css and html/lesson5activity1.html
@@ -14,7 +14,7 @@
         }
        
         div.relative{
-            position: absolute;
+            position: relative;
             border: 4px rgb(0, 225, 255) dashed;
             left: 5px;
              background-color: rgb(42, 116, 165);
