--- a/JAVASCRIPT/ls-9.2.html
+++ b/JAVASCRIPT/ls-9.2.html
@@ -6,15 +6,34 @@
     <title>Document</title>
 </head>
 <body>
+    <button onclick="f2()"> BUTTON</button>
     <p id="r"></p>
+    <p id="res"></p>
     <script> 
         var n= [24,26,10,6]
         function f1(n)
         {
             return n*2426
         }
+
+        function f1(){
+
+            var n1= 24
+            var n2= 26
+            var n3=2011
+            var r1= eval("n1+n2") + "<br>"
+            var r2= eval("n1-n2") + "<br>"
+
+var res= r1+r2 
+            document.getElementById("r").innerHTML = res
+
+
+        }
+    
+
+    
         var arr2=n.map(f1)
-        document.getElementById("r").innerHTML=arr2
+        document.getElementById("res").innerHTML=arr2
     </script>
 </body>
 </html>
