--- a/JAVASCRIPT/Calculator/index.html
+++ b/JAVASCRIPT/Calculator/index.html
@@ -54,7 +54,7 @@
             <button onclick="insert('+')" class="sp"> + </button>
             <br> 
             <button onclick="insert('.')" class="sp"> . </button>
-            <button onclick="calc()" class="spequal"> = </button>
+            <button onclick="calc()" class="equal"> = </button>
 
          
 
