--- a/JAVASCRIPT/Calculator/index.html
+++ b/JAVASCRIPT/Calculator/index.html
@@ -21,6 +21,7 @@
     <!-- Custom CSS -->
     
     <link rel="stylesheet" href="index.css" />
+
 </head>
 
 <body>
@@ -75,6 +76,7 @@
         </div>
     </div>
 </center>
-    
+   
+<script src='script.js'> </script>
 </body>
 </html>
